docs: add logoutUserHandler docs
