# docs/swagger.yaml
@@ -6,6 +6,13 @@ definitions:
       message:
         type: string
     type: object
+  handler.loginUserRequest:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    type: object
   handler.loginUserResponse:
     properties:
       email:
@@ -49,7 +56,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/handler.loginUserResponse'
+          $ref: '#/definitions/handler.loginUserRequest'
       produces:
       - application/json
       responses:
@@ -66,6 +73,29 @@ paths:
           schema:
             $ref: '#/definitions/handler.ErrorResponse'
       summary: login user
+      tags:
+      - user
+  /logout:
+    get:
+      consumes:
+      - application/json
+      description: logout cleaning the jwt cookie
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.loginUserResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      summary: logout user
       tags:
       - user
   /register:
